feat: add dict and three common sentenses

--- a/pyStu.ipynb
+++ b/pyStu.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "6a673d93-adc3-45ee-8530-db84d1ed6740",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "d5198ccb-6caa-40e2-9654-d5cbbe0da119",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "a977e2b6-7642-49a1-86a3-1eb9968b28f7",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "4a2bad13-c403-431a-85a7-3a6741b4dfb5",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "id": "6621d806-7a88-4df0-a003-3e40eab7d159",
    "metadata": {},
    "outputs": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "id": "0ea1dfce-2fc8-41f1-8c16-25d1262946f3",
    "metadata": {},
    "outputs": [
@@ -739,6 +739,517 @@
     "res = str.translate(table)\n",
     "\n",
     "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20afb451-e030-4157-8974-e17a204b8d41",
+   "metadata": {},
+   "source": [
+    "## 1.4 字典"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "670f75e4-a576-4eb4-b90b-fcd263b6a246",
+   "metadata": {},
+   "source": [
+    "### 1.4.1 基础"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b064d777-68b6-4a6f-b54a-91dbd22a7c83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic = {'name': 'Adam', 'age': '15'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "433e92d3-6301-4876-97b5-912df3c9bb16",
+   "metadata": {},
+   "source": [
+    "### 1.4.2 常用方法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0ef4d8f-6c36-44b5-bdc7-ec709bdff0e4",
+   "metadata": {},
+   "source": [
+    "#### 清空 clear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "bbf81b83-368c-47b0-a481-3d1855fa4710",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {'name': 'Adam', 'age': '15'}\n",
+    "dic.clear()\n",
+    "\n",
+    "print(dic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdf74ece-63e1-4a84-82cf-ad84f7b8c26a",
+   "metadata": {},
+   "source": [
+    "#### 浅拷贝 copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1f0296f9-bddc-4243-8d6e-21c1aa62ec3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Adam', 'age': '15', 'obj': {'num': 88}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {'name': 'Adam', 'age': '15', 'obj':{'num':99}}\n",
+    "dic2 = dic.copy()\n",
+    "dic['obj']['num'] = 88\n",
+    "\n",
+    "print(dic2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36c042e5-7c8f-4683-8d5d-d3a18326bbeb",
+   "metadata": {},
+   "source": [
+    "#### 创建新字典 fromkeys\n",
+    "依据给定的键序列和可选的默认值来创建字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2459c1c1-3124-4f2e-a8c0-d5688248c66a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Adam': 18, 'Douaa': 18}\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = ['Adam','Douaa']\n",
+    "defaultAge = 18\n",
+    "\n",
+    "dic = dict.fromkeys(items,defaultAge)\n",
+    "print(dic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "785e492f-4b35-4b80-b142-6e5b42393764",
+   "metadata": {},
+   "source": [
+    "#### 获取值 get"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ab82fe82-4c5c-4253-8451-0b7b0b00ddca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adam\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {'name': 'Adam', 'age': '15', 'obj':{'num':99}}\n",
+    "value = dic.get('name')\n",
+    "\n",
+    "print(value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6841bc2f-e438-4f86-911c-36f40c46b306",
+   "metadata": {},
+   "source": [
+    "#### 返回字典中键值对的视图 items\n",
+    "视图以可迭代的形式呈现，其中每个元素是一个包含键和对应值的元组。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d504c3de-781c-4458-b962-33a054e9df0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key:name, value:Adam\n",
+      "key:age, value:15\n",
+      "key:obj, value:{'num': 99}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {'name': 'Adam', 'age': '15', 'obj':{'num':99}}\n",
+    "list = dic.items()\n",
+    "\n",
+    "for key,value in list:\n",
+    "    print(f\"key:{key}, value:{value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b486c29-3dab-464d-9150-dbeb6e7d1562",
+   "metadata": {},
+   "source": [
+    "#### 返回所有键 keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f387ad1b-90f6-48a8-adb4-86012c014b0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key:name, value:Adam\n",
+      "key:age, value:15\n",
+      "key:obj, value:{'num': 99}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {'name': 'Adam', 'age': '15', 'obj':{'num':99}}\n",
+    "keys = dic.keys()\n",
+    "\n",
+    "for key in keys:\n",
+    "    print(f\"key:{key}, value:{dic[key]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c280660a-a429-4bb5-870f-c814b2919876",
+   "metadata": {},
+   "source": [
+    "#### 返回所有值 values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "aa20df02-acff-4f3e-b3ab-039fd11393d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values(['Adam', '15', {'num': 99}])\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {'name': 'Adam', 'age': '15', 'obj':{'num':99}}\n",
+    "values = dic.values()\n",
+    "\n",
+    "print(values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68d64c13-aac2-44ab-af4d-737ccc2c62f5",
+   "metadata": {},
+   "source": [
+    "#### 删除指定键值对 pop(self, key, default=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d7af598e-857c-4e37-b736-38deee03252c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'age': '15', 'obj': {'num': 99}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {'name': 'Adam', 'age': '15', 'obj':{'num':99}}\n",
+    "dic.pop('name')\n",
+    "\n",
+    "print(dic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61461230-1537-46d1-9285-d522f54d73c3",
+   "metadata": {},
+   "source": [
+    "#### 查询值setdefault(self, key, default=None)\n",
+    "\n",
+    "查询值，不在扔进去 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "fe6561b4-b20c-486b-a9d6-8b8b9b54259e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Douaa {'name': 'Adam', 'age': '15', 'obj': {'num': 99}, 'girl': 'Douaa'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {'name': 'Adam', 'age': '15', 'obj':{'num':99}}\n",
+    "value = dic.setdefault('girl','Douaa')\n",
+    "\n",
+    "print(value,dic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bed5611-e158-4c54-a689-be21af215770",
+   "metadata": {},
+   "source": [
+    "#### 浅更新 update\n",
+    "\n",
+    "同名key，直接覆盖。原dict不存在的key，直接扔进去"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "dc184e0a-1ee3-4164-910c-c1afe66084fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Douaa', 'age': '18', 'obj': {'num': 11}, 'birth': '3-10'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {'name': 'Adam', 'age': '15', 'obj':{'num':99,'num2':11}}\n",
+    "dic2 = {'name':'Douaa','age':'18','birth':'3-10','obj':{'num':11}}\n",
+    "dic.update(dic2)\n",
+    "\n",
+    "print(dic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aa2bf4d-1552-4103-8d8b-f4e988c830e4",
+   "metadata": {},
+   "source": [
+    "# 二、3大语句"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9af4be9b-6d6d-4dda-a9d8-3ae647eb3790",
+   "metadata": {},
+   "source": [
+    "## 2.1 顺序语句"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bac8dfd4-ade9-4cd6-80a9-148c76e5842c",
+   "metadata": {},
+   "source": [
+    "### 2.1.1 链式赋值(雷！狗都不用)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2340d1d2-a46b-49dd-940d-c29dbb994caa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 1\n",
+      "{'age': 11} {'age': 11} {'age': 11}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = b = c= 1\n",
+    "print(a,b,c)\n",
+    "\n",
+    "a = b = c = {'age':99}\n",
+    "b['age'] = 11 \n",
+    "\n",
+    "print(a,b,c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c99e2030-6017-4d60-a88e-b719de2c9fad",
+   "metadata": {},
+   "source": [
+    "## 2.2 条件语句"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c3e647e8-cb46-47ab-bbf8-1435089136a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello China\n"
+     ]
+    }
+   ],
+   "source": [
+    "flag = 1991\n",
+    "\n",
+    "if flag < 100 and True:\n",
+    "    print('Hello Douaa')\n",
+    "elif flag < 200 and 1==1:\n",
+    "    print('Hello Adam')\n",
+    "else:\n",
+    "    print('hello China')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35c272aa-997f-4003-b436-967407dee0a8",
+   "metadata": {},
+   "source": [
+    "## 2.3 循环语句"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecf30947-599e-4a3a-9840-c3b71adee9e6",
+   "metadata": {},
+   "source": [
+    "### 跳出循环 break、continue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e53d0ce-129c-471b-8375-47dfa526aff0",
+   "metadata": {},
+   "source": [
+    "### while循环"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "8fc1f66a-880f-4c60-bdb7-3ec95a1c5778",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "end\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 0\n",
+    "\n",
+    "while num < 3:\n",
+    "    num +=1\n",
+    "    print(num)\n",
+    "else:\n",
+    "    print('end')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e66e004b-13be-4d93-b763-bf192a617ca0",
+   "metadata": {},
+   "source": [
+    "### for循环"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "780d801b-4237-4abf-bc5d-945dac5626ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "End\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = range(1,10)\n",
+    "for num in nums:\n",
+    "    print(num)\n",
+    "else:\n",
+    "    print('End')"
    ]
   },
   {
