feat: add chapter Class

--- a/pyStu.ipynb
+++ b/pyStu.ipynb
@@ -1085,7 +1085,7 @@
    "id": "6aa2bf4d-1552-4103-8d8b-f4e988c830e4",
    "metadata": {},
    "source": [
-    "# 二、3大语句"
+    "# 二、三大语句"
    ]
   },
   {
@@ -1250,6 +1250,573 @@
     "    print(num)\n",
     "else:\n",
     "    print('End')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1d6d6d4-1e27-417c-a4be-a7da6068aece",
+   "metadata": {},
+   "source": [
+    "# 三、函数、类和对象"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c0042f4-6531-43c0-9131-bea217538507",
+   "metadata": {},
+   "source": [
+    "## 3.1 函数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d80c3f2-f18f-4c9a-b16c-9b9142de4b80",
+   "metadata": {},
+   "source": [
+    "### 3.1.1 定义"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "15da178e-e7bb-43cd-9138-f91efe611159",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(num1,num2):\n",
+    "    return num1+num2\n",
+    "\n",
+    "res = add(1,2)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eaa62e1-0591-4e5d-8b3c-f42b9afecd66",
+   "metadata": {},
+   "source": [
+    "### 3.1.2 参数\n",
+    "\n",
+    "顺序必须是：必选参数、默认参数、可变参数、命名关键字参数和关键字参数。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf0e256f-cb7f-4bae-8fe6-3e31d38d2787",
+   "metadata": {},
+   "source": [
+    "+ 默认参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a092d20e-5f95-4404-b1da-f8a86f47038d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 默认参数\n",
+    "def fn(x,y=1):\n",
+    "    return x*y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7042015-b487-4c9c-a484-c4f5c12320cf",
+   "metadata": {},
+   "source": [
+    "+ 可变参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f253a236-74c4-446d-be10-a6eb89c29605",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5)\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc(*nums):\n",
+    "    print(nums)\n",
+    "    sum = 0\n",
+    "    for num in nums:\n",
+    "        sum += num\n",
+    "    return sum\n",
+    "\n",
+    "sum = calc(1,2,3,4,5)\n",
+    "\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24583918-8bf8-48f4-86b4-2d74a192db5e",
+   "metadata": {},
+   "source": [
+    "+ 关键字参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2669b055-66f4-4db1-8e6e-6091fc684028",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adam\n"
+     ]
+    }
+   ],
+   "source": [
+    "def getName(**obj):\n",
+    "    if 'name' in obj:\n",
+    "        return obj['name']\n",
+    "    else:\n",
+    "        return 'None'\n",
+    "\n",
+    "obj = {'name':'Adam'}\n",
+    "myName = getName(**obj)\n",
+    "print(myName)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04836d82-dc4a-4906-82e8-b976ae8d1a6f",
+   "metadata": {},
+   "source": [
+    "### 3.1.3 注意事项\n",
+    "\n",
+    "1. 在函数内部的任何位置定义的变量，*在函数体的其他部分都可以被访问和使用*，只要该变量在使用之前已经被定义。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "67ae81b1-9faa-45fe-970c-dc794dce42bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "def getFlag(num):\n",
+    "    if num > 10:\n",
+    "        flag = 1\n",
+    "    else:\n",
+    "        flag = 0\n",
+    "    flag = bool(flag)\n",
+    "    return flag\n",
+    "\n",
+    "res = getFlag(1)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df08de52-f575-40f9-8946-9c596d1ff99a",
+   "metadata": {},
+   "source": [
+    "### 3.1.4 空函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "2e6015e7-466d-4b01-bdfb-0c7bf76a3ab8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fn():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3954e233-ea58-4d87-8128-3186f82060b0",
+   "metadata": {},
+   "source": [
+    "## 3.2 高阶函数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44ca065d-1a78-49bf-b1b1-89bdeebd2653",
+   "metadata": {},
+   "source": [
+    "### 3.2.1 filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "79b21559-e8f2-4745-b0bf-10427f948710",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "23\n",
+      "15\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'dict_items' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m value \u001b[38;5;129;01min\u001b[39;00m res:\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28mprint\u001b[39m(value)\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlist\u001b[39m[res])\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'dict_items' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "    # filter\n",
+    "def fn(num):\n",
+    "    return num > 10\n",
+    "\n",
+    "\n",
+    "res = filter(fn, [1, 5, 100, 23, 5, 15])\n",
+    "\n",
+    "for value in res:\n",
+    "    print(value)\n",
+    "\n",
+    "print(list[res])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2f7b3d5-851d-48ac-a146-04cb088f73c4",
+   "metadata": {},
+   "source": [
+    "### 3.2.2 map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ccbdc04-f77d-43c4-aad5-622aa708974e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myData = map(lambda x: x * x, [1, 2, 3, 4, 5])\n",
+    "print(list(myData))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4efcd36e-40b3-4d68-a856-b6aaf50a7603",
+   "metadata": {},
+   "source": [
+    "### 3.2.3 reduce\n",
+    "\n",
+    "reduce(f, [x1, x2, x3, x4]) = f(f(f(x1, x2), x3), x4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "82e39daa-544e-40b1-8bc3-8abf0530a420",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'reduce' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[47], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfn\u001b[39m(x, y):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m+\u001b[39m y \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m----> 5\u001b[0m res \u001b[38;5;241m=\u001b[39m reduce(fn, [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m6\u001b[39m])\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(res)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'reduce' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def fn(x, y):\n",
+    "    return x + y + 10\n",
+    "\n",
+    "\n",
+    "res = reduce(fn, [1, 2, 3, 4, 5, 6])\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d0ff3d3-e071-4f72-9950-2d170cdc6270",
+   "metadata": {},
+   "source": [
+    "### 3.2.4 返回函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f7cb0d6-ff4c-4f69-a0d5-cddde166a924",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getSum(*args):\n",
+    "\n",
+    "    def calc():\n",
+    "        sum = 0\n",
+    "        for num in args:\n",
+    "            sum += num\n",
+    "        return sum\n",
+    "\n",
+    "    return calc\n",
+    "\n",
+    "\n",
+    "sum = getSum(1, 2, 3, 4, 5)\n",
+    "print(sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12950314-6e59-447b-a77c-ea290a08b22b",
+   "metadata": {},
+   "source": [
+    "## 3.3 类"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "092323dc-0fb2-4bfb-b696-6cacb83c09e6",
+   "metadata": {},
+   "source": [
+    "### 3.3.1 定义"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "221477ca-fd5e-4bc6-b845-96fe41768599",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adam\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    def getName(self):\n",
+    "        return self.name\n",
+    "\n",
+    "\n",
+    "XM = Person('Adam',18)\n",
+    "name = XM.getName()\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8151667-cedc-4360-9a7b-97db45c7a3a0",
+   "metadata": {},
+   "source": [
+    "### 3.3.2 继承"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "553cc81c-8c87-4960-a864-208aa5499397",
+   "metadata": {},
+   "source": [
+    "#### 单继承"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "5c3e6b3c-dcf1-4107-8f45-71426e25808e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name:Adam, age:18, ID:510802\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    def getName(self):\n",
+    "        return self.name\n",
+    "\n",
+    "    def setName(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "class Stu(Person):\n",
+    "    \n",
+    "    def __init__(self, name, age, ID):\n",
+    "        # Person.__init__(self, name, age)\n",
+    "        super().__init__(name, age)\n",
+    "        self.ID = ID\n",
+    "\n",
+    "    def getInfo(self):\n",
+    "        print(f'name:{self.name}, age:{self.age}, ID:{self.ID}')\n",
+    "\n",
+    "stu = Stu('Adam',18,'510802')\n",
+    "stu.getInfo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f967129-fd97-4757-85b0-dd14c2328880",
+   "metadata": {},
+   "source": [
+    "#### 多重继承"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbf7c4f4-94a0-47c9-ab27-51a2986d6643",
+   "metadata": {},
+   "source": [
+    "（1）基础版"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "3e2c438d-f93f-47ba-ac0f-590ab87b0d4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name:Adam, age:18, ID:510802\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def getName(self):\n",
+    "        return self.name\n",
+    "\n",
+    "    def setName(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "class Animal:\n",
+    "    def __init__(self, age):\n",
+    "        self.age = age\n",
+    "\n",
+    "    def getAge(self):\n",
+    "        return self.age\n",
+    "\n",
+    "class Stu(Person, Animal):\n",
+    "\n",
+    "    def __init__(self,name,age,ID):\n",
+    "        Person.__init__(self, name)\n",
+    "        Animal.__init__(self, age)\n",
+    "        self.ID = ID\n",
+    "    \n",
+    "    def getInfo(self):\n",
+    "        print(f'name:{self.name}, age:{self.age}, ID:{self.ID}')\n",
+    "\n",
+    "stu = Stu('Adam',18,'510802')\n",
+    "stu.getInfo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e360be68-dc6f-4a29-84aa-8571b6c97a0b",
+   "metadata": {},
+   "source": [
+    "（2）super版"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "051e49ed-6a6a-48d9-826e-0632e19ebc70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name:Adam, age:18, ID:510802\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name, **kwargs):\n",
+    "        self.name = name\n",
+    "        super().__init__(**kwargs)\n",
+    "\n",
+    "    def getName(self):\n",
+    "        return self.name\n",
+    "\n",
+    "    def setName(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "class Animal:\n",
+    "    def __init__(self, age, **kwargs):\n",
+    "        self.age = age\n",
+    "        super().__init__(**kwargs)\n",
+    "\n",
+    "    def getAge(self):\n",
+    "        return self.age\n",
+    "\n",
+    "class Stu(Person, Animal):\n",
+    "\n",
+    "    def __init__(self,name,age,ID,**kwargs):\n",
+    "        # Person.__init__(self, name)\n",
+    "        # Animal.__init__(self, age)\n",
+    "        super().__init__(name=name,age=age,**kwargs)\n",
+    "        self.ID = ID\n",
+    "    \n",
+    "    def getInfo(self):\n",
+    "        print(f'name:{self.name}, age:{self.age}, ID:{self.ID}')\n",
+    "\n",
+    "stu = Stu('Adam',18,'510802')\n",
+    "stu.getInfo()\n",
+    "# print(stu.mro())"
    ]
   },
   {
